# back-office-lmelp

./: .backend-port.json  .cruft.json  .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude/: check-backend-freshness.sh  get-backend-info.sh  get-frontend-info.sh  get-services-info.sh  settings.local.json
.claude/commands/: fix-issue.md  stocke-memoire.md
.claude/plans/: generation-avis-critiques-2phases.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: ci-cd.yml  ci.yml  docker-publish.yml  docs.yml
deployment/: .env.template  README.md  docker-compose.yml
docker/: .env.template  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/backend/: Dockerfile
docker/deployment/: .env.template  docker-compose.yml
docker/scripts/: logs.sh  start.sh  stop.sh  test-build.sh  update.sh
docs/: .nav.yml  .pages  cache-first-architecture.md  claude.md  commands.md  index.md
docs/back-office_lmelp/: besoin.md
docs/back-office_lmelp/01 - modif description/: 0 - prompt.md  2 - discussion.md  2 - planifier.md  5 - status.md
docs/claude/echanges/: 107-Masquer des episodes.md  111 - implement health route.md
docs/claude/memory/: 2025-01-advanced-search-implementation.md  250829-2315-mcp-mongodb-repair.md  250829-2326-exploration-base-mongodb.md  250830-0716-garde-fous-memoire.md  250830-1345-tests-frontend-100pourcent.md  250901-1240-analyse-tests-local-vs-cicd.md  250902-0700-resolution-issue2-port-discovery.md  250902-1344-websocket-warnings-fix-complete.md  250905-2115-issue23-interface-refactoring.md  250906-0425.md  250906-0520-fix-episode-dropdown-titles-issue29.md  250906-1148-fix-issue-31-mermaid-diagrams.md  250906-1642-homepage-dashboard-implementation.md  250906-2135-mobile-network-access-implementation.md  250907-0818-avis-critiques-statistiques-implementation.md  250908-2259.md  250910-2200-issue41-livres-extraction-implementation.md  250917-1445-moteur-recherche-textuelle.md  (+78 more)
docs/deployment/: .pages  calibre-setup.md  docker-setup.md  nav.yml  portainer-guide.md  testing-guide.md  troubleshooting.md  update-guide.md
docs/dev/: .nav.yml  .pages  README.md  api.md  architecture.md  babelio-cache.md  babelio-cover-scraping.md  babelio-integration.md  biblio-verification-flow.md  bibliographic-data-processing.md  calibre-db-schema.md  calibre-integration.md  capture-fixtures-ui.md  claude-ai-guide.md  claude-code-sept-2025.md  commands.md  database.md  deployment.md  development-workflow.md  development.md  environment-variables.md  episode-title-display-improvement.md  frontend-architecture.md  issue-185-matching-problem-analysis.md  llm-avis-critiques-generation.md  llm-extraction-architecture.md  mypy-pre-commit-type-stubs.md  port-discovery.md  security.md  start-dev-script.md  summary-garbage-collector.md  test-coverage-improvement.md  testing-patterns-advanced-mocking.md  unified-dev-script.md  validation-biblio-tests.md  vue-ui-patterns.md
docs/lmelp/: Questions de Cadrage Spécifiques.md  cahier-des-charges-lmelp-backoffice-v2.md
docs/user/: .nav.yml  .pages  README.md  advanced-search.md  automatic-summary-correction.md  babelio-cache.md  babelio-verification.md  calibre-integration.md  compteurs-et-statistiques.md  debug-logging.md  detail-pages.md  emissions.md  episode-masking.md  episodes.md  generation-avis-critiques-llm.md  gestion-doublons.md  interface.md  livres-auteurs-extraction.md  llm-fallback-system.md  mobile-access.md  palmares.md  recommandation-livres.md  troubleshooting.md  version-about.md
frontend/: README.md  index.html  package-lock.json  package.json  test_memory_guard.html  vite.config.js
frontend/public/: site.webmanifest
frontend/src/: App.vue  main.js  style.css
frontend/tests/: BabelioMigration.cookieButtons.test.js  BabelioMigration.cookiePropagation.test.js  BabelioMigration.progress-bar.test.js  BabelioMigration.stop-button.test.js
notebooks/: dataset_avis.py  spike_implicit_cf.ipynb  spike_surprise_cf.ipynb  spike_svd_latent_cf.ipynb  spike_validation_cf.ipynb
scripts/: explore_calibre.py  fix_orphan_book_ids.py  generate-changelog.sh  generate_fixtures.py  merge_critique_doublon_eric_neuhoff.py  migrate_url_babelio.py  start-dev.sh  temp_delete_masked_emissions.py
scripts/migration_donnees/: migrate_all_url_babelio.sh  migrate_url_babelio.py  migration_problematic_cases.jsonl
src/back_office_lmelp/: __init__.py  app.py  settings.py
tests/: __init__.py  conftest.py  test_accent_insensitive_search.py  test_accept_suggestion_removes_author.py  test_advanced_search.py  test_annas_archive_url_service.py  test_api_avis_critiques_endpoints.py  test_api_avis_endpoints.py  test_api_calibre_matching.py  test_api_critiques_endpoints.py  test_api_critiques_list_merge.py  test_api_emissions_endpoints.py  test_api_endpoints.py  test_api_endpoints.py.disabled  test_api_endpoints_simple.py  test_api_episodes_radiofrance.py  test_api_palmares.py  test_api_refactoring.py  test_api_routes.py  test_api_search_emissions.py  test_app_no_legacy_calls.py  test_app_unified_system_only.py  test_auteur_detail_endpoint.py  test_auteur_emissions_avis.py  test_auteur_service.py  test_author_all_books_not_found.py  test_author_book_models.py  test_author_creation_with_correction.py  test_auto_process_verified_with_babelio_enrichment.py  test_automatic_port_selection.py  test_automatic_port_selection_integration.py  test_avis_critique_summary_correction.py  test_avis_critiques_generation_service.py  test_avis_editeur_enrichment.py  test_avis_editeur_migration.py  test_avis_extraction_comma_in_title.py  test_avis_extraction_emission_20250309.py  test_avis_extraction_service.py  test_avis_extraction_typos_section2.py  test_avis_extraction_wrong_match_plural.py  (+167 more)
tests/fixtures/: __init__.py  avis_critique_summary_samples.py  avis_summary_samples.py  episode_28_09_2025_books.yml  transcription_samples.py
tests/integration/: test_validation_suggestions_integration.py
tests/utils/: test_startup_logging.py
(+176 files in other folders)
