[project]
name = "back-office-lmelp"
version = "0.1.0"
description = "un back offic pour gerer la base de donnee du projet https://github.com/castorfou/lmelp"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "back-office-lmelp Team"}
]
keywords = ["data-science", "jupyter", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pymongo>=4.6.0",
    "motor>=3.3.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "fastapi-cors>=0.0.6",
    "openai>=1.0.0",
    "psutil>=5.9.0",
    "httpx>=0.24.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "thefuzz",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "implicit>=0.7.2",
    "scikit-surprise>=1.1.4",
    "pandas<3",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "ipykernel>=7.2.0",
    "numpy<2",
]

[project.optional-dependencies]
dev = [
    "cruft",
    "pre-commit",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.24.0",
    "ruff",
    "mypy",
    "types-psutil",
    "types-beautifulsoup4",
    "pillow",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "click==8.2.1", # https://github.com/mkdocs/mkdocs/issues/4032
    "mkdocstrings[python]",
    "mkdocs-include-markdown-plugin",
    "mkdocs-awesome-nav",
    "pymdown-extensions",
    "mkdocs-rtd-dropdown",
    "nbdev>=2.4.6"
]

[project.urls]
Homepage = "https://github.com/castor_fou/back-office-lmelp"
Documentation = "https://castor_fou.github.io/back-office-lmelp"
Repository = "https://github.com/castor_fou/back-office-lmelp.git"
Issues = "https://github.com/castor_fou/back-office-lmelp/issues"

[project.scripts]
back_office_lmelp_setup = "scripts.setup:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# Configuration uv pour la reproductibilité
[dependency-groups]
dev = [
    "pytest",
    "pytest-cov>=7.0.0",
]

# Configuration Ruff - Linter et formateur Python moderne
[tool.ruff]
# Longueur de ligne (cohérent avec black)
line-length = 88

# Fichiers à exclure
extend-exclude = [
    "data/*",
    "models/*",
    "logs/*",
    ".jupyter/*",
    "notebooks/*.ipynb",
]

# Version Python cible
target-version = "py311"

[tool.ruff.lint]
# Règles activées
extend-select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ERA",    # eradicate (commented code)
    "PD",     # pandas-vet
    "NPY",    # numpy-specific rules
]

# Règles ignorées (adaptées Data Science)
ignore = [
    "E501",   # Line too long (black/ruff format s'en occupe)
    "B905",   # zip() sans strict= (Python 3.10+)
    "PD901",  # Avoid `df` as variable name (commun en DS)
    "RET504", # Assign + return -> return direct (parfois moins lisible)
]

[tool.ruff.format]
# Style de formatage
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Configuration isort intégrée
known-first-party = ["docker_lmelp"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pep8-naming]
# Convention de nommage adaptée Data Science
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
# Règles spécifiques par type de fichier
"notebooks/*.py" = ["E402", "F401", "F841"]  # Imports, unused vars OK en notebooks
"scripts/*.py" = ["T201"]                    # print() OK dans les scripts
"tests/*.py" = ["S101", "PLR2004"]          # assert OK, magic values OK en tests

# Configuration MyPy - Vérification de types statique
[tool.mypy]
# Version Python et compatibilité
python_version = "3.11"
platform = "linux"
plugins = ["pydantic.mypy"]

# Chemins à analyser : exclure src/ car déjà dans sys.path via editable install
files = ["tests"]

# Ne pas chercher de namespace packages pour éviter la détection en double
namespace_packages = false

# Niveau de vérification
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Configuration stricte progressive
disallow_any_generics = false        # Autorisé au début
disallow_untyped_calls = false       # Autorisé au début
disallow_untyped_defs = false        # Autorisé au début
disallow_incomplete_defs = true      # Fonctions partiellement typées interdites
disallow_untyped_decorators = false  # Autorisé au début
disallow_subclassing_any = true
no_implicit_reexport = true

# Gestion des imports
ignore_missing_imports = false
follow_imports = "normal"

# Configuration pour les dépendances sans stubs mypy
[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
    "scipy.*",
    "plotly.*",
    "aiohttp.*",
    "bs4.*",
    "thefuzz.*",
    "rapidfuzz.*",
    "surprise.*",
    "openai.*",
    "uvicorn.*",
    "fastapi.*",
    "pydantic.*",
    "starlette.*",
    "bson.*",
    "pymongo.*",
    "motor.*",
    "dotenv.*",
    "yaml.*",
    "psutil.*",
]
ignore_missing_imports = true

# Configuration spéciale pour notebooks
[[tool.mypy.overrides]]
module = "notebooks.*"
ignore_errors = true

# Configuration tests
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "pytest",
]
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:websockets.legacy.*",
    "ignore::DeprecationWarning:uvicorn.protocols.websockets.*",
]
